clusters/my-cluster/infrastucture/keykloack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:25.0.2
        args: ["start-dev"]
        ports:
        - containerPort: 8080
        readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
